--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "dev": "nodemon server.js"
-    "test": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "nodemon server.js",
   },
   "keywords": [],
   "author": "",
