--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js",
-    "test": "nodemon server.js",
+    "test": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
