--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
