--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon server.js",
     "test": "nodemon server.js"
   },
+   "engines": {
+    "node": "14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
