--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "md5": "^2.3.0",
     "mkdir": "0.0.2",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+      "cors": "^2.8.5"
   }
 }
