--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
  "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+        "cors": "^2.8.5",
+
     "express": "^4.17.1", 
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
@@ -25,6 +27,6 @@
     "mkdir": "0.0.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-      "cors": "^2.8.5"
+ 
   }
 }
