--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
-   "engines": {
+  "engines": {
     "node": "14.x"
   },
   "scripts": {
@@ -16,17 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
- "body-parser": "^1.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-        "cors": "^2.8.5",
-
-    "express": "^4.17.1", 
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mkdir": "0.0.2",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.7",
- 
+    "nodemon": "^2.0.7"
   }
 }
